<resources>
    <string name="app_name">TheMovieDb</string>
    <!-- TODO: Remove or change this placeholder text

   Agregar multilenguajes a los strings
    -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar_dialog">Cancelar</string>
    <string name="texto_menu_principal">Bienvenidos.Millones de películas, programas de televisión y personas por descubrir. Explora ahora.</string>
    <string name="lo_mas_polular">Lo más popular</string>
    <string name="en_streaming">En streaming</string>
    <string name="title">Title</string>
    <string name="_24_mar_2015">24 mar 2015</string>
    <string name="image">image</string>
    <string name="ver_gratis">Ver gratis</string>
    <string name="ltimos_avances">Últimos avances</string>
    <string name="job">Job</string>
    <string name="departments">Departments</string>
    <string name="proyectos">Proyectos</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="languajes">Languajes</string>
    <string name="peoples">Peoples</string>
    <string name="movie_detail">Detalle Pelicula</string>
    <string name="description">Description</string>
    <string name="polular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Up Coming</string>
    <string name="top_rated">Top Rated</string>
    <string name="_60">60%</string>
    <string name="movie_name">Pelicula Name</string>
    <string name="error_service">Servicio no disponible, intente más tarde.</string>
    <string name="verifica_conexion">Verifica tu conexion de internet</string>
    <string name="descripci_n_general">Descripción general</string>
    <string name="long_text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="comedy">Comedy</string>
    <string name="settings">Settings</string>
    <string name="user_score">User Score</string>

</resources>