<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <com.faltenreich.skeletonlayout.SkeletonLayout
        android:id="@+id/skeleton"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".presentacion.ui.moviedetail.MovieDetailFragment">

                    <ImageView
                        android:id="@+id/image_back"
                        android:layout_width="0dp"
                        android:layout_height="250dp"
                        android:background="@drawable/backgroun_recycler_view"
                        android:scaleType="fitXY"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars" />


                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="@string/descripci_n_general"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/recycler_categories"
                        app:layout_constraintStart_toStartOf="@+id/recycler_categories"
                        app:layout_constraintTop_toBottomOf="@+id/recycler_categories" />

                    <include
                        android:id="@+id/progress_with_text"
                        layout="@layout/progress_with_porcent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="@+id/image_back"
                        app:layout_constraintTop_toBottomOf="@+id/image_poster" />

                    <TextView
                        android:id="@+id/tv_descripcion"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:justificationMode="inter_word"
                        android:paddingBottom="16dp"
                        android:text="@string/long_text"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView10"
                        app:layout_constraintStart_toStartOf="@+id/textView10"
                        app:layout_constraintTop_toBottomOf="@+id/textView10" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_categories"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tv_date"
                        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/image_back"
                        app:layout_constraintTop_toBottomOf="@+id/progress_with_text"
                        tools:text="2023-10-18" />

                    <TextView
                        android:id="@+id/tv_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/tv_date"
                        app:layout_constraintTop_toTopOf="@+id/tv_date"
                        tools:text="02 Hour 05 min" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="@string/user_score"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/progress_with_text"
                        app:layout_constraintTop_toTopOf="@+id/progress_with_text" />

                    <TextView
                        android:id="@+id/tv_user_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="@+id/textView13"
                        app:layout_constraintTop_toBottomOf="@+id/textView13"
                        tools:text="1831" />

                    <ImageView
                        android:id="@+id/image_poster"
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        app:layout_constraintBottom_toBottomOf="@+id/image_back"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image_back"
                        tools:srcCompat="@tools:sample/avatars" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </ScrollView>

    </com.faltenreich.skeletonlayout.SkeletonLayout>

</layout>